--- a/assets/styles/_tariffForm.scss
+++ b/assets/styles/_tariffForm.scss
@@ -1,13 +1,10 @@
-.form-workshop{
+.tariff-form{
   .widget{
     height: 40px;
     width: 350px;
   }
   .description-widget{
     height: 300px;
-  }
-  .under-title{
-    height: 200px;
   }
   .errors{
     margin-left: 650px;
