--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -26,3 +26,5 @@
 @import "_bookIndex.scss";
 @import "_giftCardIndex.scss";
 @import "_promotionalCodeForm.scss";
+@import "_tariffForm.scss";
+@import "_tariffIndex.scss";
