--- a/assets/styles/_cardService.scss
+++ b/assets/styles/_cardService.scss
@@ -1,10 +1,16 @@
 .service-card{
+  margin-left: 20px;
+  margin-right: 20px;
+  width: 265px;
+  @include media-breakpoint-down(md){
+    width: 100%;
+  }
   .image-container{
     height: 280px;
     width: 225px;
     @include media-breakpoint-down(md){
       width: 100%;
-      height: 425px;
+      height: 362px;
     }
     @media screen and (max-width: 375px){
       height: 367px;
@@ -15,6 +21,9 @@
     img{
       object-fit: cover;
     }
+  }
+  .content-container{
+    min-height: 200px;
   }
   .text-container{
     position: relative;
