--- a/assets/styles/_coachingImage.scss
+++ b/assets/styles/_coachingImage.scss
@@ -1,18 +1,79 @@
 .coachingImage{
-  width: 75%;
-  @include media-breakpoint-down(md){
-    width: 90%;
+  .head-text-container{
+    @include media-breakpoint-up(md){
+      position: relative;
+      top: 150px;
+      left: 125px;
+      width: 666px;
+      padding-left: 100px;
+      padding-right: 100px;
+      padding-top: 80px;
+      margin-left: auto;
+      margin-right: 200px;
+    }
+    @include media-breakpoint-down(md){
+      margin-top: 50px;
+      width: 90%;
+      margin-left: auto;
+      margin-right: auto;
+      h1{
+        font-size: 30px;
+      }
+    }
+  }
+  .title-image-container{
+    @include media-breakpoint-up(md){
+      position: absolute;
+      z-index: -1;
+      margin-left: 100px;
+      height: 400px;
+      width: 60%;
+      img{
+        object-fit: cover;
+      }
+    }
+    @include media-breakpoint-down(xxl){
+      width: 70%;
+      height: 310px;
+    }
+    @include media-breakpoint-down(md){
+      width: 100%;
+      height: initial;
+    }
+  }
+  .top-container{
+    @include media-breakpoint-up(md){
+      margin-bottom: 250px;
+    }
   }
   .p-iframe{
-    width: 60%;
+    width: 800px;
     @include media-breakpoint-down(md){
       width: 90%;
     }
   }
-  .column{
-    width: 40%;
+  .iframe-container{
+    width: 75%;
     @include media-breakpoint-down(md){
-      width: 100%;
+      width: 90%;
+    }
+  }
+  .text-column{
+    width: 800px;
+    @include media-breakpoint-down(md){
+      width: 90%;
+    }
+  }
+  .top-column{
+    margin-top: 100px;
+  }
+  .column-bottom{
+    .container-img{
+      width: 30%;
+    }
+    .text-column{
+      margin-left: 75px;
+      margin-right: 75px;
     }
   }
   .container-column{
