--- a/assets/styles/_home.scss
+++ b/assets/styles/_home.scss
@@ -1,6 +1,25 @@
 .home{
+  .img-start{
+    margin-top: -25px;
+    height: 460px;
+    object-fit: cover;
+    object-position: top;
+    @include media-breakpoint-down(md){
+      height: 250px;
+    }
+  }
+  .title-container{
+    width: 400px;
+  }
+  .text-video{
+    width: 450px;
+    background-color: #F5F5F5;
+    @include media-breakpoint-down(md){
+      width: 90%;
+    }
+  }
   .container-video{
-    width: 800px;
+    width: 715px;
     height: 400px;
     @include media-breakpoint-down(md){
       width: 100%;
@@ -19,37 +38,74 @@
     margin-top: 150px;
     margin-left: auto;
     margin-right: auto;
-
-    .left{
-      width: 50%;
-      @include media-breakpoint-down(lg){
-        width: 100%;
-      }
-      .head{
+    .top{
+      .left{
+        width: 65%;
         background-color: $primary;
+        @include media-breakpoint-down(lg){
+          width: 100%;
+        }
+      }
+      .right{
+        width: 35%;
+        @include media-breakpoint-down(lg){
+          display: none;
+        }
+        .decoration{
+          width: 350px;
+          height: 35%;
+          background-color: #FFEEE2;
+        }
       }
     }
-    .right{
-      width: 350px;
-      @include media-breakpoint-down(lg){
-        display: none;
+    .bottom{
+      @include media-breakpoint-up(md){
+        margin-bottom: -400px;
       }
-      .image{
-        height: 450px;
+      .left{
+        width: 65%;
+        @include media-breakpoint-down(lg){
+          width: 100%;
+        }
       }
-      .decoration{
-        width: 350px;
-        height: 35%;
-        background-color: #FFEEE2;
+      .right{
+        width: 35%;
+        @include media-breakpoint-down(lg){
+          display: none;
+        }
+        .image{
+          height: 450px;
+        }
+        .decoration{
+          width: 300px;
+          height: 450px;
+          z-index: -3;
+          background-color: #FFEEE2;
+          position: relative;
+          bottom: 400px;
+          left: 50px;
+        }
       }
     }
   }
+  .commentary-introduction{
+    width: 1000px;
+    @include media-breakpoint-down(xxl){
+      width: 800px;
+    }
+    @include media-breakpoint-down(lg){
+      width: 75%;
+    }
+  }
   .commentaries-carousel{
-    min-height: 600px;
+    min-height: 500px;
     width: 100%;
 
     .commentary{
       width: 1000px;
+      @include media-breakpoint-down(xxl){
+        width: 800px;
+      }
       @include media-breakpoint-down(lg){
         width: 75%;
       }
@@ -81,7 +137,7 @@
     .quote{
       background-color: $light;
       opacity: 0.85;
-      width: 35%;
+      width: 665px;
       @include media-breakpoint-down(md){
         width: 90%;
       }
