--- a/templates/_include/_card_workshop.html.twig
+++ b/templates/_include/_card_workshop.html.twig
@@ -1,16 +1,30 @@
-<div class="image-container">
-    <img src="{{ asset('uploads/images/pictures/' ~ workshop.smallPicture) }}" alt="">
-    <div class="bg-primary text-center text-white footer w-75 mx-auto d-flex flex-column justify-content-between align-items-center">
-        <p class="fs-5 fst-italic m-0 my-3">
-            {% if app.request.locale == 'fr' %}
-                {{ workshop.titleFr|raw}}
-            {% elseif app.request.locale == 'es' %}
-                {{ workshop.titleEs|raw}}
-            {% elseif app.request.locale == 'et' %}
-                {{ workshop.titleEt|raw}}
-            {% endif %}
-        </p>
-        <a href="{{ path('app_workshop_show', {id: workshop.id}) }}"><button class="btn btn-secondary rounded-0 p-1 text-white fs-3">
-            <img src="{{ asset('build/images/icons8-plus-que-50.png') }}" alt="" class="h-100"></button></a>
+<div class="image-container mx-auto">
+    <img src="{{ asset('uploads/images/pictures/' ~ workshop.smallPicture) }}" alt="" class="w-100 h-100">
+</div>
+<div>
+    <div class="d-flex flex-column text-container mx-auto rounded-1">
+        <div class="content-container">
+            <h3 class="font-weight-bold text-center mt-3 fst-italic fs-6 mb-0">
+                {% if app.request.locale == 'fr' %}
+                    {{ workshop.titleFr }}
+                {% elseif app.request.locale == 'es' %}
+                    {{ workshop.titleEs }}
+                {% else %}
+                    {{ workshop.titleEt }}
+                {% endif %}</h3>
+            <p class="mt-2 mx-3">
+                {% if app.request.locale == 'fr' %}
+                    {{ workshop.underTitleFr|nl2br }}
+                {% elseif app.request.locale == 'es' %}
+                    {{ workshop.underTitleEs|nl2br }}
+                {% else %}
+                    {{ workshop.underTitleEt|nl2br }}
+                {% endif %}
+            </p>
+        </div>
+        <div class="d-flex justify-content-center">
+            <a href="{{ path('app_workshop_show', {id: workshop.id}) }}"><button class="btn btn-secondary text-white fs-6">
+                    {{ 'workshop.interested'|trans }}</button></a>
+        </div>
     </div>
 </div>
