--- a/templates/_include/_footer.html.twig
+++ b/templates/_include/_footer.html.twig
@@ -13,10 +13,10 @@
             </div>
         </div>
         <div class="d-flex flex-column">
-            <a class="mt-2" href="{{ path('app_home') }}">home</a>
-            <a class="mt-2" href="{{ path('contact_service') }}">Contact</a>
-            <a class="mt-2" href="{{ path('app_service_index') }}">Prestations</a>
-            <a class="mt-2" href="">Tarifs</a>
+            <a class="mt-2" href="{{ path('app_home') }}">{{ 'footer.home'|trans }}</a>
+            <a class="mt-2" href="{{ path('contact_service') }}">{{ 'footer.contact'|trans }}</a>
+            <a class="mt-2" href="{{ path('app_service_index') }}">{{ 'footer.service'|trans }}</a>
+            <a class="mt-2" href="">{{ 'footer.tarifs'|trans }}</a>
         </div>
         <div class="d-flex flex-column justify-content-center me-2 mt-3 me-md-5">
             <p class="mt-1">SWEDBANK<br>EE732200221072016678<br></p>
