--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -5,6 +5,14 @@
 
 {% block body %}
     <div class="book-index">
+        <div class="top-container">
+            <div class="title-image-container">
+                <img src="{{ asset('build/images/Fabienne-EBOOKS.jpg') }}" alt="" class="w-100 h-100">
+            </div>
+            <div class="head-text-container mx-auto bg-light">
+                <h1 class="text-primary fs-2">{{ 'book.index.h1'|trans }}</h1>
+            </div>
+        </div>
         {% if buyed %}
             <p class="buyed-text mx-auto">{{ 'book.index.buyedBook'|trans|raw }}</p>
         {% endif %}
@@ -12,7 +20,7 @@
             <p class="buyed-text mx-auto">{{ 'book.index.error'|trans|raw }}</p>
         {% endif %}
         {% for book in books %}
-            <div class="column-container d-flex justify-content-between mx-auto mt-5 flex-column flex-md-row">
+            <div class="column-container d-flex justify-content-around mx-auto mt-5 flex-column flex-md-row">
                 <div class="left-column column d-flex justify-content-center">
                     {% if app.request.locale == 'fr' %}
                         <img src="{{ asset('uploads/images/pictures/' ~ book.pictureFr) }}" alt="">
@@ -32,9 +40,45 @@
                     {% endif %}
                     <div class="d-flex justify-content-center mt-4">
                         {% if book.price == 0 %}
-                            <a href="{{ path('app_download_free', {'id': book.id}) }}">
-                                <button class="btn btn-secondary text-white px-3">{{ 'book.download'|trans }}</button>
-                            </a>
+{#                            <a href="{{ path('app_download_free', {'id': book.id}) }}">#}
+{#                                <button class="btn btn-secondary text-white px-3">{{ 'book.download'|trans }}</button>#}
+{#                            </a>#}
+                            <button type="button" class="btn btn-secondary text-white px-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                {{ 'book.download'|trans }}
+                            </button>
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <form action="{{ path('app_download_free', {'id': book.id}) }}">
+                                            <div class="modal-body">
+                                                <div class="d-flex flex-column align-items-center">
+                                                    <div class="mt-3 form-field d-flex flex-column">
+                                                        <label for="email">Email:</label>
+                                                        <input type="text" name="email" id="email" class="rounded" required>
+                                                    </div>
+                                                    <div class="mt-3 form-field d-flex flex-column">
+                                                        <label for="name">Nom:</label>
+                                                        <input type="text" name="name" id="name" class="rounded" required>
+                                                    </div>
+                                                    <div class="mt-3 form-field d-flex flex-column">
+                                                        <label for="firstName">Prénom:</label>
+                                                        <input type="text" name="firstName" id="firstName" class="rounded" required>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="modal-footer">
+                                                <div class="d-flex justify-content-center mt-3">
+                                                    <button class="btn btn-secondary text-white px-3">{{ 'book.download'|trans }}</button>
+                                                </div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
                         {% else %}
                             <form action="{{ path('app_checkout', {'id': book.id}) }}" method="get">
                                 <div class="d-flex">
@@ -52,7 +96,7 @@
                             </form>
                         {% endif %}
                         {% if app.user %}
-                            <a href="{{ path('app_book_edit', {'id': book.id}) }}" class="ms-5">
+                            <a href="{{ path('app_book_edit', {'id': book.id}) }}" class="ms-5 my-auto">
                                 <button class="btn btn-secondary text-white px-3">{{ 'book.update'|trans }}</button>
                             </a>
                         {% endif %}
