--- a/templates/workshop/index.html.twig
+++ b/templates/workshop/index.html.twig
@@ -5,9 +5,25 @@
 
 {% block body %}
     <div class="workshop-index">
-        <h1 class="text-center text-primary">{{ 'workshop.index.body.title'|trans }}</h1>
-        <div class="container-text mx-auto mt-5">
-            <p>{{ 'workshop.index.p.1'|trans|raw }}</p>
+        <div class="top-container">
+            <div class="title-image-container">
+                <img src="{{ asset('build/images/Fabienne-COACHING-D\'IMAGE.jpg') }}" alt="" class="w-100 h-100">
+            </div>
+            <div class="head-text-container mx-auto bg-light">
+                <h1 class="text-center text-primary mb-3">{{ 'workshop.index.body.title'|trans }}</h1>
+                <p>{{ 'workshop.index.p.1'|trans|raw }}</p>
+            </div>
+        </div>
+        <div class="bottom-text-container mt-5 mx-auto">
+            <h1 class="text-center text-primary mb-3">{{ 'workshop.index.body.title.masterClass'|trans }}</h1>
+            <p>{{ 'workshop.index.p.2'|trans|raw }}</p>
+        </div>
+        <div class="d-flex flex-wrap justify-content-center service-card-container mx-auto">
+            {% for workshop in workshops %}
+                <div class="service-card mt-5 d-flex flex-column">
+                    {% include '_include/_card_workshop.html.twig' %}
+                </div>
+            {% endfor %}
         </div>
         {% if app.user %}
             <div class="d-flex justify-content-center mt-5">
@@ -16,12 +32,6 @@
                 </a>
             </div>
         {% endif %}
-        <div class="row row-cols-md-3 row-cols-1 workshop-card-container mx-auto mt-5">
-            {% for workshop in workshops %}
-                <div class="card-workshop pb-5 mt-5">
-                    {% include '_include/_card_workshop.html.twig' %}
-                </div>
-            {% endfor %}
-        </div>
+
     </div>
 {% endblock %}
