--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,5 +20,6 @@
         {% endblock %}
     </main>
     {% include '_include/_footer.html.twig' %}
+    {% block script %}{% endblock %}
     </body>
 </html>
