--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -19,6 +19,9 @@
         {% if error %}
             <p class="buyed-text mx-auto">{{ 'book.index.error'|trans|raw }}</p>
         {% endif %}
+        {% if emailError %}
+            
+        {% endif %}
         {% for book in books %}
             <div class="column-container d-flex justify-content-around mx-auto mt-5 flex-column flex-md-row">
                 <div class="left-column column d-flex justify-content-center">
@@ -40,45 +43,9 @@
                     {% endif %}
                     <div class="d-flex justify-content-center mt-4">
                         {% if book.price == 0 %}
-{#                            <a href="{{ path('app_download_free', {'id': book.id}) }}">#}
-{#                                <button class="btn btn-secondary text-white px-3">{{ 'book.download'|trans }}</button>#}
-{#                            </a>#}
                             <button type="button" class="btn btn-secondary text-white px-3" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                 {{ 'book.download'|trans }}
                             </button>
-                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog modal-dialog-centered">
-                                    <div class="modal-content">
-                                        <div class="modal-header">
-                                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                        </div>
-                                        <form action="{{ path('app_download_free', {'id': book.id}) }}">
-                                            <div class="modal-body">
-                                                <div class="d-flex flex-column align-items-center">
-                                                    <div class="mt-3 form-field d-flex flex-column">
-                                                        <label for="email">Email:</label>
-                                                        <input type="text" name="email" id="email" class="rounded" required>
-                                                    </div>
-                                                    <div class="mt-3 form-field d-flex flex-column">
-                                                        <label for="name">Nom:</label>
-                                                        <input type="text" name="name" id="name" class="rounded" required>
-                                                    </div>
-                                                    <div class="mt-3 form-field d-flex flex-column">
-                                                        <label for="firstName">Prénom:</label>
-                                                        <input type="text" name="firstName" id="firstName" class="rounded" required>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <div class="d-flex justify-content-center mt-3">
-                                                    <button class="btn btn-secondary text-white px-3">{{ 'book.download'|trans }}</button>
-                                                </div>
-                                            </div>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
                         {% else %}
                             <form action="{{ path('app_checkout', {'id': book.id}) }}" method="get">
                                 <div class="d-flex">
@@ -95,6 +62,40 @@
                                 {% endif %}
                             </form>
                         {% endif %}
+                        {% set promoCode = app.request.get('promoCode') %}
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="exampleModalLabel"></h5>
+                                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                    </div>
+                                    <form action="{{ path('app_download_free', {'id': book.id, 'promoCode': promoCode}) }}">
+                                        <div class="modal-body">
+                                            <div class="d-flex flex-column align-items-center">
+                                                <div class="mt-3 form-field d-flex flex-column">
+                                                    <label for="email">{{ 'book.index.email'|trans }}</label>
+                                                    <input type="text" name="email" id="email" class="rounded" required>
+                                                </div>
+                                                <div class="mt-3 form-field d-flex flex-column">
+                                                    <label for="name">{{ 'book.index.lastName'|trans }}</label>
+                                                    <input type="text" name="name" id="name" class="rounded" required>
+                                                </div>
+                                                <div class="mt-3 form-field d-flex flex-column">
+                                                    <label for="firstName">{{'book.index.firstName'|trans}}</label>
+                                                    <input type="text" name="firstName" id="firstName" class="rounded" required>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <div class="d-flex justify-content-center mt-3">
+                                                <button class="btn btn-secondary text-white px-3">{{ 'book.download'|trans }}</button>
+                                            </div>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                        </div>
                         {% if app.user %}
                             <a href="{{ path('app_book_edit', {'id': book.id}) }}" class="ms-5 my-auto">
                                 <button class="btn btn-secondary text-white px-3">{{ 'book.update'|trans }}</button>
@@ -112,4 +113,15 @@
             </div>
         {% endif %}
     </div>
+{% endblock %}
+{% block script %}
+    {% if app.request.get('promoCode') %}
+        <script src="https://code.jquery.com/jquery-3.6.4.slim.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        <script>
+            $(document).ready(function() {
+                $('#exampleModal').modal('show');
+            });
+        </script>
+    {% endif %}
 {% endblock %}
