--- a/assets/styles/_tariffIndex.scss
+++ b/assets/styles/_tariffIndex.scss
@@ -1,9 +1,13 @@
 .tariff-index{
+  .card-deco-container{
+    background-color: #FED3B5;
+  }
   .tariff-card-container{
     width: 75%;
     .card-container{
       width: 300px;
       height: 300px;
+      margin-bottom: 115px;
       img{
         width: 100%;
         height: 100%;
@@ -11,11 +15,9 @@
       }
       .text-div{
         position: relative;
-        bottom: 45%;
-        width: 70%;
-        padding-left: 5%;
-        padding-right: 0;
-        min-height: 175px;
+        bottom: 135px;
+        width: 80%;
+        min-height: 200px;
         p{
           font-size: 16px;
           margin: 0;
