--- a/templates/_include/_footer.html.twig
+++ b/templates/_include/_footer.html.twig
@@ -16,7 +16,7 @@
             <a class="mt-2" href="{{ path('app_home') }}">{{ 'footer.home'|trans }}</a>
             <a class="mt-2" href="{{ path('contact_service') }}">{{ 'footer.contact'|trans }}</a>
             <a class="mt-2" href="{{ path('app_service_index') }}">{{ 'footer.service'|trans }}</a>
-            <a class="mt-2" href="">{{ 'footer.tarifs'|trans }}</a>
+            <a class="mt-2" href="{{ path('app_tariff_index') }}">{{ 'footer.tarifs'|trans }}</a>
         </div>
         <div class="d-flex flex-column justify-content-center me-2 mt-3 me-md-5">
             <p class="mt-1">SWEDBANK<br>EE732200221072016678<br></p>
