--- a/templates/contact/workshopContact.html.twig
+++ b/templates/contact/workshopContact.html.twig
@@ -36,6 +36,12 @@
                 {{ form_errors(form.phoneNumber) }}
             </div>
             <div class="d-flex flex-column mt-3">
+                {{ form_label(form.comingWithFriend) }}
+                <p class="mb-0 mt-0"><small><i>{{ 'contact.form.phoneNumber.afterComingWithFriend'|trans }}</i></small></p>
+                {{ form_widget(form.comingWithFriend) }}
+                {{ form_errors(form.comingWithFriend) }}
+            </div>
+            <div class="d-flex flex-column mt-3">
                 {{ form_label(form.informed, 'contact.workshop.form.informed'|trans) }}
                 {{ form_widget(form.informed) }}
                 {{ form_errors(form.informed) }}
@@ -45,15 +51,15 @@
                 {{ form_widget(form.message) }}
                 {{ form_errors(form.message) }}
             </div>
-            <p class="fst-italic">{{ 'contact.workshop.commentary.info'|trans }}</p>
-            <p class="mb-0">{{ 'contact.workshop.form.agreements.info'|trans|raw }}</p>
+            <p class="fst-italic"><small>{{ 'contact.workshop.commentary.info'|trans }}</small></p>
+            <p class="mb-0"><small>{{ 'contact.workshop.form.agreements.info'|trans|raw }}</small></p>
             <div class="d-flex mt-3">
                 {{ form_widget(form.agreements) }}
                 {{ form_label(form.agreements, 'contact.workshop.form.agreements'|trans) }}
                 {{ form_errors(form.agreements) }}
             </div>
             <div class="d-flex justify-content-center">
-                <button class="btn btn-secondary text-white mt-4 fs-5 px-4">envoyer</button>
+                <button class="btn btn-secondary text-white mt-4 fs-5 px-4">{{ 'contact.workshop.form.send'|trans }}r</button>
             </div>
             {{ form_end(form) }}
         </div>
