--- a/templates/tariff/edit.html.twig
+++ b/templates/tariff/edit.html.twig
@@ -11,6 +11,8 @@
 
         {{ include('tariff/_form.html.twig', {'button_label': 'Mettre a jour'}) }}
 
-        {{ include('tariff/_delete_form.html.twig') }}
+        <div class="d-flex justify-content-center mt-4">
+            {{ include('tariff/_delete_form.html.twig') }}
+        </div>
     </div>
 {% endblock %}
