--- a/templates/presentation/fabienne.html.twig
+++ b/templates/presentation/fabienne.html.twig
@@ -11,7 +11,7 @@
             </div>
             <div class="head-text-container mx-auto bg-light">
                 <h1 class="text-primary text-center">Fabienne Chmara</h1>
-                <p class="text-center fs-3">{{ 'fabienne.title.p'|trans|raw }}</p>
+                <p class="text-center">{{ 'fabienne.title.p'|trans|raw }}</p>
             </div>
         </div>
         <div class="container-content mx-auto">
