--- a/assets/styles/_navbar.scss
+++ b/assets/styles/_navbar.scss
@@ -1,7 +1,7 @@
 .navbar {
   min-height: 5rem;
-  background-color: $light;
-  margin-bottom: 100px;
+  background-color: white;
+  padding-bottom: 100px;
   @include media-breakpoint-down(md){
     margin-bottom: 50px;
   }
