--- a/templates/presentation/coachingImage.html.twig
+++ b/templates/presentation/coachingImage.html.twig
@@ -19,9 +19,11 @@
         <div class="iframe-container mx-auto">
             <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1603456062&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/tallinna-opetajate-maja" title="Tallinna Õpetajate Maja" target="_blank" style="color: #cccccc; text-decoration: none;">Tallinna Õpetajate Maja</a> · <a href="https://soundcloud.com/tallinna-opetajate-maja/oppimise-vaimus-12-fabienne-chmara-oma-ainulaadse-ja-autentse-stiili-arendamisest" title="Õppimise vaimus #12. Fabienne Chmara oma ainulaadse ja autentse stiili arendamisest" target="_blank" style="color: #cccccc; text-decoration: none;">Õppimise vaimus #12. Fabienne Chmara oma ainulaadse ja autentse stiili arendamisest</a></div>
         </div>
-        <div class="text-column top-column mx-auto">
-            <h2 class="text-primary fs-1">{{ 'coachingImage.rightColumn.h2'|trans }}</h2>
-            <p class="mt-5">{{ 'coachingImage.rightColumn.p.1'|trans|raw }}</p>
+        <div class="top-column-container">
+            <div class="text-column top-column mx-auto">
+                <h2 class="text-primary fs-1">{{ 'coachingImage.rightColumn.h2'|trans }}</h2>
+                <p class="mt-5">{{ 'coachingImage.rightColumn.p.1'|trans|raw }}</p>
+            </div>
         </div>
         <div class="d-flex justify-content-around align-items-center column-bottom mt-5 flex-column-reverse flex-md-row ms-md-5">
             <div class="container-img column d-flex flex-column mt-5">
