--- a/assets/styles/_tariffIndex.scss
+++ b/assets/styles/_tariffIndex.scss
@@ -5,9 +5,11 @@
   .tariff-card-container{
     width: 75%;
     .card-container{
+      margin-left: 12.5px;
+      margin-right: 12.5px;
       width: 300px;
       height: 300px;
-      margin-bottom: 115px;
+      margin-bottom: 315px;
       img{
         width: 100%;
         height: 100%;
@@ -17,7 +19,7 @@
         position: relative;
         bottom: 135px;
         width: 80%;
-        min-height: 200px;
+        min-height: 300px;
         p{
           font-size: 16px;
           margin: 0;
