--- a/templates/presentation/company.html.twig
+++ b/templates/presentation/company.html.twig
@@ -7,7 +7,7 @@
     <div class="company">
         <div class="top-container">
             <div class="title-image-container">
-                <img src="{{ asset('build/images/Fabienne-COACHING-D\'IMAGE.jpg') }}" alt="" class="w-100 h-100">
+                <img src="{{ asset('build/images/Fabienne-ENTREPRISE.jpg') }}" alt="" class="w-100 h-100">
             </div>
             <div class="head-text-container mx-auto bg-light">
                 <h1 class="text-primary text-center title mx-auto">{{ 'company.content.title'|trans }}</h1>
