--- a/templates/presentation/fabienne.html.twig
+++ b/templates/presentation/fabienne.html.twig
@@ -28,7 +28,7 @@
                     <div class="decoration"></div>
                 </div>
             </div>
-            <div class="d-flex justify-content-around flex-md-row container-row flex-column">
+            <div class="d-flex justify-content-around flex-md-row container-row flex-column py-2 bg-white">
                 <div class="column">
                     <img src="{{ asset('build/images/fabienne-2.png') }}" alt="" class="w-100 mt-5 image-2">
                 </div>
