--- a/templates/workshop/index.html.twig
+++ b/templates/workshop/index.html.twig
@@ -7,7 +7,7 @@
     <div class="workshop-index">
         <div class="top-container">
             <div class="title-image-container">
-                <img src="{{ asset('build/images/Fabienne-COACHING-D\'IMAGE.jpg') }}" alt="" class="w-100 h-100">
+                <img src="{{ asset('build/images/Fabienne-ATELIERS.jpg') }}" alt="" class="w-100 h-100">
             </div>
             <div class="head-text-container mx-auto bg-light">
                 <h1 class="text-center text-primary mb-3">{{ 'workshop.index.body.title'|trans }}</h1>
