--- a/templates/service/index.html.twig
+++ b/templates/service/index.html.twig
@@ -33,6 +33,22 @@
                     {% include '_include/_card_service.html.twig' %}
                 </div>
             {% endfor %}
+            <div class="service-card mt-5 d-flex flex-column">
+                <div class="image-container mx-auto">
+                    <img src="{{ asset('build/images/Fabimage-carte-cadeau-FR-1-petit.png') }}" alt="" class="w-100 h-100">
+                </div>
+                <div>
+                    <div class="d-flex flex-column text-container mx-auto rounded-1">
+                        <div class="content-container">
+                            <h3 class="font-weight-bold text-center mt-3 fst-italic fs-6 mb-4">{{ 'home.giftCard.title'|trans }}</h3>
+                        </div>
+                        <div class="d-flex justify-content-center">
+                            <a href="{{ path('giftCard_index') }}"><button class="btn btn-secondary text-white">
+                                    {{ 'Service.readMore'|trans }}</button></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 {% endblock %}
